<resources>
    <string name="app_name">File Tracker</string>
    <string name="email_header">Email</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="agree_to_our_terms_and_condition">Agree to our terms and Condition</string>
    <string name="already_have_any_account">Already have any Account ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="don_t_have_any_account">Don\'t have any Account ?</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_front_page">FrontPageActivity</string>
    <string name="title_activity_main_activity">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">File Management App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_prompt_home">Roles</string>
    <string name="disapprove">Disapprove</string>
    <string name="approve">Approve</string>

    <string name="menu_home">Home</string>
    <string name="menu_batch_processing">Batch Processing</string>
    <string name="menu_generate_file">Generate File</string>
    <string name="menu_plan_to_send">Plan To Send</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_approve_disapprove">Approve/Disapprove</string>
    <string name="menu_about_developers"><b>About Developers</b></string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="item_name_and_details">Item name and details</string>


</resources>
