<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.filemanagement.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_batch_processing"
        android:name="com.example.filemanagement.ui.batchProcessing.BatchProcessingFragment"
        android:label="@string/menu_batch_processing"
        tools:layout="@layout/fragment_batch_processing" />

    <fragment
        android:id="@+id/nav_plan_to_send"
        android:name="com.example.filemanagement.ui.planToSend.PlanToSendFragment"
        android:label="@string/menu_plan_to_send"
        tools:layout="@layout/fragment_plan_to_send" />

    <fragment
        android:id="@+id/nav_recieve"
        android:name="com.example.filemanagement.ui.recieve.RecieveFragment"
        android:label="@string/menu_receive"
        tools:layout="@layout/fragment_recieve" />

    <fragment
        android:id="@+id/nav_approve_disapprove"
        android:name="com.example.filemanagement.ui.approveDisapprove.ApproveDisapproveFragment"
        android:label="@string/menu_approve_disapprove"
        tools:layout="@layout/fragment_approve_disapprove" />

    <fragment
        android:id="@+id/nav_about_developers"
        android:name="com.example.filemanagement.ui.aboutDevelopers.AboutDevelopersFragment"
        android:label="@string/menu_about_developers"
        tools:layout="@layout/fragment_about_developers" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.filemanagement.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.filemanagement.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.filemanagement.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>